# InertialLOAM_SensorFusion_MasterThesis

./: .gitignore  README.md  frames.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/imu_complementary_filter/lib/imu_complementary_filter/: complementary_filter_node
install/imu_complementary_filter/share/imu_complementary_filter/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/imu_filter_madgwick/include/imu_filter_madgwick/: base_node.hpp  imu_filter.h  imu_filter_ros.h  stateless_orientation.h  visibility_control.h  world_frame.h
install/imu_filter_madgwick/lib/imu_filter_madgwick/: imu_filter_madgwick_node
install/imu_filter_madgwick/share/imu_filter_madgwick/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/imu_tools/share/imu_tools/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_learning_package/lib/my_learning_package/: ekf  ekf_ins  hello_publisher  hello_subscriber  imu_HAP_converter  imu_calibrater  imu_dead_recon  imu_filter  imu_listener  imu_tf_broadcaster  ins  lidar_odometry  lidar_odometry_velodyne  loam_backend  my_test_node  preprocessing  preprocessing_velodyne  static_recorder
install/my_learning_package/share/my_learning_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ndt_omp_ros2/include/pclomp/: gicp_omp.h  gicp_omp_impl.hpp  ndt_omp.h  ndt_omp_impl.hpp  voxel_grid_covariance_omp.h  voxel_grid_covariance_omp_impl.hpp
install/ndt_omp_ros2/share/ndt_omp_ros2/: local_setup.bash  (+9 more)
src/my_learning_package/: CMakeLists.txt  package.xml
src/my_learning_package/config/: backend.yaml  ekf.yaml  ekf_ins.yaml  gnss.yaml  imu_filter.yaml  imu_filter_madgwick.yaml  imu_hap_converter.yaml  ins.yaml  lidar_odometry.yaml  lidar_odometry_indoor.yaml  lidar_odometry_velodyne.yaml  preprocessing.yaml  preprocessing_velodyne.yaml  septentrio_node.yaml  static_recorder.yaml
src/my_learning_package/copies/: LidarOdometry_00.cpp  LidarOdometry_01.cpp  LidarOdometry_before_imu_copy.cpp  PreprocessingVelodyne_00.cpp  Preprocessing_00.cpp
src/my_learning_package/include/my_learning_package/: common.h  ins.hpp  point_type.h
src/my_learning_package/include/my_learning_package/utils/: common.h  common.hpp
src/my_learning_package/launch/: backend.launch.py  ekf.launch.py  ekf_ins.launch.py  imu_jerk_filter.launch.py  imu_madgwick_filter.launch.py  imu_run.launch.py  imu_viz_launch.py  inertial_loam.launch.py  ins.launch.py  ins_viz.launch.py  intertial_loam.launch.py  launch_sim.launch.py  lidar_imu_launch.py  lidar_odometry.launch.py  lidar_odometry_velodyne.launch.py  loam.launch.py  loam_launch.py  loam_launch_velodyne.py  loam_velodyne.launch.py  odometry_viz_launch.py  package_variables.py  preprocessing.launch.py  preprocessing_velodyne.launch.py  record_demo.py  record_lidar_HAP.launch.py  record_lidar_imu_launch.py  record_lidar_imu_mid70_xsens.launch.py  record_lidar_launch.py  record_lidar_mid360.launch.py  record_lidar_static_HAP.launch.py  record_lidar_static_mid70.launch.py  robot_viz.launch.py  rsp.launch.py  run_HAP.launch.py  run_mid360.launch.py  run_mid70_xsens.launch.py  septentrio_node.launch.py  velodyne_pcap_read_launch.py
src/my_learning_package/rviz/: IMU2.rviz  INS.rviz  LO.rviz  display.rviz  robot_viz.rviz
src/my_learning_package/src/: Backend.cpp  EKF.cpp  EKF_INS.cpp  EKF_full_matrices.cpp  EKF_old.cpp  FormatConvert.cpp  IMUFilter.cpp  INS.cpp  LidarOdometry.cpp  LidarOdometryVelodyne.cpp  Preprocessing.cpp  PreprocessingVelodyne.cpp  StaticRecord.cpp  common.h  hello_publisher.cpp  hello_subscriber.cpp  imu_HAP_converter.cpp  imu_calibrater.cpp  imu_calibrater_old.cpp  imu_dead_recon.cpp  imu_listener.cpp  imu_tf_broadcaster.cpp  ins.cpp  kalmanlinear.cpp  my_test_node.cpp
src/my_learning_package/urdf/: AionR1.urdf copy.xacro  AionR1.urdf.xacro  AionR1Viz.urdf.xacro  MTi_10.urdf  MTi_10.urdf.xacro  data_platform.urdf.xacro  gazebo_control.xacro  livox_mid-70.stl  livox_mid-70.stp  loam_robot_01.urdf.xacro  loam_robot_02.urdf.xacro  loam_robot_sim.urdf.xacro  loam_robot_viz.urdf.xacro  materials.urdf.xacro  mid70.urdf.xacro
(+164 files in other folders)
